plugins {
    id 'java'
    id 'org.springframework.boot' version '3.4.5'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'dk.gatchaz'
version = '0.0.1-SNAPSHOT'

java {
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}

jar {
    enabled = false
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencyManagement {
    imports {
        // Spring AI BOM (스타터 버전 관리). Spring Boot 3.4.x 호환 버전.
        mavenBom "org.springframework.ai:spring-ai-bom:1.0.0"
        // AWS SDK v2 BOM (버전 관리). 셋로그 영상 업로드(S3)용.
        // 빌드 시 이 버전이 존재하지 않는다는 오류가 나면 최신 2.x 버전으로 올려주세요.
        mavenBom "software.amazon.awssdk:bom:2.29.52"
    }
}

sourceSets {
    main {
        resources {
            // 매퍼 XML을 매퍼 인터페이스와 같은 위치(src/main/java)에 두기 위해 추가
            srcDirs += 'src/main/java'
            exclude '**/*.java'
        }
    }
}

tasks.register('copyPrivate', Copy) {
    from('Server-Secret') {
        include '*.yml'
    }
    into 'src/main/resources'
}

tasks.named('processResources') {
    dependsOn 'copyPrivate'
}

dependencies {
    /** Spring Boot starters **/
    // 앱(모바일) 전용 로그인이라 OAuth2 인가 코드 교환용 spring-boot-starter-oauth2-client 는 불필요.
    // Google/Apple 로 이미 발급받은 id_token 을 서버에서 직접 검증하고, 우리 자체 JWT 를 발급하는 방식만 쓴다.
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-web-services'
    implementation 'org.springframework.boot:spring-boot-starter-validation'

    /** MyBatis **/
    implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.4'

    /** JWT libraries **/
    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
    implementation 'jakarta.xml.bind:jakarta.xml.bind-api:4.0.0'
    // Apple identity token(JWK) 서명 검증용
    implementation 'com.nimbusds:nimbus-jose-jwt:9.37.3'

    /** Lombok **/
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    /** MySQL JDBC driver **/
    runtimeOnly 'com.mysql:mysql-connector-j'

    /** P6Spy - 실행 SQL을 파라미터가 채워진(복붙 가능) 형태로 로깅 **/
    implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.10.0'

    /** Spring AI - OpenAI 호환 스타터. 무료 티어 Groq 사용(base-url 로 지정). base-url/model 만 바꾸면 OpenAI/로컬 Ollama 등으로 교체 가능 **/
    implementation 'org.springframework.ai:spring-ai-starter-model-openai'

    /** AWS S3 - 셋로그 영상 업로드 **/
    implementation 'software.amazon.awssdk:s3'

    /** Development tools **/
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    // developmentOnly 'org.springframework.boot:spring-boot-docker-compose'

    /** Testing dependencies **/
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    /** Google ID Token 검증용 **/
    implementation 'com.google.api-client:google-api-client:2.8.1'

    /** Swagger for API documentation **/
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.5'
}

tasks.named('test') {
    useJUnitPlatform()
}